--- a/index.html
+++ b/index.html
@@ -70,18 +70,156 @@
             </div>
         </section>
 
-        <!-- Detection Image -->
-        <div class="detection-container">
-            <img src="/assets/detection.svg" alt="Detection" style="max-width: 640px; height: auto; width: 100%" />
-        </div>
+        <!-- Social Proof Section -->
+        <section class="social-proof">
+            <div class="social-proof-container">
+                <h2 class="social-proof-title">THE LEADING OPEN SOURCE<br>INTERVIEW ASSISTANT</h2>
+                <div class="stats-grid">
+                    <div class="stat-item">
+                        <span class="stat-number">5K+</span>
+                        <span class="stat-label">GitHub Stars</span>
+                    </div>
+                    <div class="stat-item">
+                        <span class="stat-number">60K+</span>
+                        <span class="stat-label">Downloads</span>
+                    </div>
+                </div>
+                <div class="placed-at">
+                    <p class="placed-label">Users already placed at</p>
+                    <div class="company-logos">
+                        <img src="/assets/Amazon_logo.svg" alt="Amazon" class="company-logo amazon-logo" />
+                        <img src="/assets/hashedin-logo.svg" alt="HashedIn" class="company-logo hashedin-logo" />
+                    </div>
+                    <p class="company-more">and a lot more but I never asked
+                        <svg class="tear-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M12 21c-4.4 0-8-3.6-8-8 0-5 8-11 8-11s8 6 8 11c0 4.4-3.6 8-8 8z"/>
+                        </svg>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Stealth Features Table -->
+        <section class="stealth-section">
+            <h2 class="stealth-title">COMPLETELY UNDETECTABLE</h2>
+            <p class="stealth-subtitle">Built from the ground up to be invisible</p>
+            <div class="stealth-table-container">
+                <table class="stealth-table">
+                    <tbody>
+                        <tr>
+                            <td class="feature-name">
+                                <svg class="table-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M12 2a3 3 0 0 0-3 3v4a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3z"/>
+                                    <path d="M19 10v2a7 7 0 0 1-14 0v-2"/>
+                                    <line x1="12" y1="19" x2="12" y2="22"/>
+                                </svg>
+                                Real-time Audio Processing
+                            </td>
+                            <td class="check-cell">
+                                <svg class="check-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
+                                    <polyline points="20 6 9 17 4 12"/>
+                                </svg>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="feature-name">
+                                <svg class="table-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <rect x="2" y="3" width="20" height="14" rx="2" ry="2"/>
+                                    <line x1="8" y1="21" x2="16" y2="21"/>
+                                    <line x1="12" y1="17" x2="12" y2="21"/>
+                                </svg>
+                                Hidden from Dock
+                            </td>
+                            <td class="check-cell">
+                                <svg class="check-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
+                                    <polyline points="20 6 9 17 4 12"/>
+                                </svg>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="feature-name">
+                                <svg class="table-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"/>
+                                    <line x1="1" y1="1" x2="23" y2="23"/>
+                                </svg>
+                                Invisible to Screen Share
+                            </td>
+                            <td class="check-cell">
+                                <svg class="check-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
+                                    <polyline points="20 6 9 17 4 12"/>
+                                </svg>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="feature-name">
+                                <svg class="table-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                                    <line x1="3" y1="9" x2="21" y2="9"/>
+                                    <line x1="9" y1="21" x2="9" y2="9"/>
+                                </svg>
+                                Hidden from System Tray
+                            </td>
+                            <td class="check-cell">
+                                <svg class="check-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
+                                    <polyline points="20 6 9 17 4 12"/>
+                                </svg>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="feature-name">
+                                <svg class="table-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <rect x="4" y="4" width="16" height="16" rx="2" ry="2"/>
+                                    <rect x="9" y="9" width="6" height="6"/>
+                                    <line x1="9" y1="1" x2="9" y2="4"/>
+                                    <line x1="15" y1="1" x2="15" y2="4"/>
+                                    <line x1="9" y1="20" x2="9" y2="23"/>
+                                    <line x1="15" y1="20" x2="15" y2="23"/>
+                                    <line x1="20" y1="9" x2="23" y2="9"/>
+                                    <line x1="20" y1="14" x2="23" y2="14"/>
+                                    <line x1="1" y1="9" x2="4" y2="9"/>
+                                    <line x1="1" y1="14" x2="4" y2="14"/>
+                                </svg>
+                                Bypasses Activity Monitor
+                            </td>
+                            <td class="check-cell">
+                                <svg class="check-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
+                                    <polyline points="20 6 9 17 4 12"/>
+                                </svg>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="feature-name">
+                                <svg class="table-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="12" cy="12" r="10"/>
+                                    <line x1="2" y1="12" x2="22" y2="12"/>
+                                    <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
+                                </svg>
+                                Undetectable by Browser
+                            </td>
+                            <td class="check-cell">
+                                <svg class="check-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
+                                    <polyline points="20 6 9 17 4 12"/>
+                                </svg>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
 
         <!-- Features Section -->
         <section class="features">
+            <h2 class="features-title">POWERFUL FEATURES</h2>
             <div class="bento-grid">
                 <div class="bento-item">
                     <canvas class="bento-canvas" id="canvas1"></canvas>
                     <div class="content">
-                        <span class="feature-icon">👁️</span>
+                        <span class="feature-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+                                <circle cx="12" cy="12" r="3"/>
+                            </svg>
+                        </span>
                         <h3>Screen Vision</h3>
                         <p>
                             Captures screenshots and sends them to Google Gemini. Perfect for reading interview questions, coding problems, or any
@@ -93,7 +231,13 @@
                 <div class="bento-item">
                     <canvas class="bento-canvas" id="canvas2"></canvas>
                     <div class="content">
-                        <span class="feature-icon">👂</span>
+                        <span class="feature-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M12 2a3 3 0 0 0-3 3v4a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3z"/>
+                                <path d="M19 10v2a7 7 0 0 1-14 0v-2"/>
+                                <line x1="12" y1="19" x2="12" y2="22"/>
+                            </svg>
+                        </span>
                         <h3>Audio Capture</h3>
                         <p>Listens to system audio and converts speech to text for AI processing.</p>
                     </div>
@@ -102,7 +246,11 @@
                 <div class="bento-item">
                     <canvas class="bento-canvas" id="canvas3"></canvas>
                     <div class="content">
-                        <span class="feature-icon">💬</span>
+                        <span class="feature-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
+                            </svg>
+                        </span>
                         <h3>AI Responses</h3>
                         <p>Generates intelligent answers automatically using Google Gemini API.</p>
                     </div>
@@ -111,7 +259,12 @@
                 <div class="bento-item">
                     <canvas class="bento-canvas" id="canvas4"></canvas>
                     <div class="content">
-                        <span class="feature-icon">🔒</span>
+                        <span class="feature-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <rect x="3" y="11" width="18" height="11" rx="2" ry="2"/>
+                                <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
+                            </svg>
+                        </span>
                         <h3>Stealth Mode</h3>
                         <p>Invisible during screen sharing and recording. Stays hidden as a system overlay that screen capture software ignores.</p>
                     </div>
@@ -120,7 +273,12 @@
                 <div class="bento-item">
                     <canvas class="bento-canvas" id="canvas5"></canvas>
                     <div class="content">
-                        <span class="feature-icon">👤</span>
+                        <span class="feature-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                                <circle cx="12" cy="7" r="4"/>
+                            </svg>
+                        </span>
                         <h3>Multiple Profiles</h3>
                         <p>
                             Switch between different modes like job interview, sales call, negotiation, or study session. Each profile optimizes AI
@@ -132,7 +290,14 @@
                 <div class="bento-item">
                     <canvas class="bento-canvas" id="canvas6"></canvas>
                     <div class="content">
-                        <span class="feature-icon">✍️</span>
+                        <span class="feature-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M12 19l7-7 3 3-7 7-3-3z"/>
+                                <path d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z"/>
+                                <path d="M2 2l7.586 7.586"/>
+                                <circle cx="11" cy="11" r="2"/>
+                            </svg>
+                        </span>
                         <h3>Customizable Prompts</h3>
                         <p>
                             Provide context like your resume, company info, or personal details to get more personalized and relevant AI responses
@@ -144,7 +309,19 @@
                 <div class="bento-item">
                     <canvas class="bento-canvas" id="canvas7"></canvas>
                     <div class="content">
-                        <span class="feature-icon">⌨️</span>
+                        <span class="feature-icon">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <rect x="2" y="4" width="20" height="16" rx="2" ry="2"/>
+                                <path d="M6 8h.001"/>
+                                <path d="M10 8h.001"/>
+                                <path d="M14 8h.001"/>
+                                <path d="M18 8h.001"/>
+                                <path d="M8 12h.001"/>
+                                <path d="M12 12h.001"/>
+                                <path d="M16 12h.001"/>
+                                <path d="M7 16h10"/>
+                            </svg>
+                        </span>
                         <h3>Keyboard Shortcuts</h3>
                         <p>
                             Control everything with customizable hotkeys. Trigger captures, switch modes, or generate responses without touching the
