--- a/index.html
+++ b/index.html
@@ -71,9 +71,14 @@
             </section>
 
             <!-- Stealth -->
+            <hr class="divider" />
             <section class="section">
-                <h2>Undetectable</h2>
-                <p class="section-desc">Built from the ground up to be invisible. No trace.</p>
+                <div class="section-header">
+                    <div class="section-header-content">
+                        <h2>Undetectable</h2>
+                        <p>Built from the ground up to be invisible. No trace.</p>
+                    </div>
+                </div>
                 <ul class="check-list">
                     <li>
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"/></svg>
@@ -99,8 +104,13 @@
             </section>
 
             <!-- Features -->
+            <hr class="divider" />
             <section class="section">
-                <h2>Features</h2>
+                <div class="section-header">
+                    <div class="section-header-content">
+                        <h2>Features</h2>
+                    </div>
+                </div>
                 <div class="features-grid">
                     <div class="feature">
                         <div class="feature-icon">
@@ -180,8 +190,13 @@
             </section>
 
             <!-- FAQ -->
+            <hr class="divider" />
             <section class="section">
-                <h2>FAQ</h2>
+                <div class="section-header">
+                    <div class="section-header-content">
+                        <h2>FAQ</h2>
+                    </div>
+                </div>
                 <div class="faq-grid">
                     <div class="faq-item">
                         <h3>Is it free?</h3>
@@ -219,7 +234,9 @@
             </section>
 
             <!-- CTA -->
+            <hr class="divider" />
             <section class="cta">
+                <hr class="divider--thick" style="margin: 0 auto 40px;" />
                 <h2>Ready to start?</h2>
                 <p>Join 60,000+ users.</p>
                 <a href="#" id="downloadBtn2" class="btn-primary">
